@startuml
!theme toy


entity User {
  * user_id

}

entity Enrollment {
  * enrollment_id
  * user_id
  * team_id
}

entity Team {
  * team_id
  * user_id
}

entity Map {
  * map_id
  * map_name
  --
   result
}

entity Scrim {
  * scrim_id
  * date
}

entity ScrimLog{
  * scrimlog_id
  * data
}

Team }|--o| Enrollment
Enrollment |o--|{ User


Scrim ||-|{ Map
Scrim ||--o{ ScrimLog

Team ||-|{ Scrim

@enduml